unpackaged/main/default/objects/Lead_Response_Journal__c/Lead_Response_Journal__c.object-meta.xml
<CustomObject>
    <label>Lead Response Journal</label>
    <nameField>
        <displayFormat>LRJ-{0000000000}</displayFormat>
        <label>Lead Response Journal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Response Journals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>