unpackaged/main/default/objects/Lead_Response_Journal__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated Account of the Lead Response Journal</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lead Response Journals</relationshipLabel>
    <relationshipName>Lead_Response_Journals</relationshipName>
    <type>Lookup</type>
</CustomField>