unpackaged/main/default/objects/Lead_Response_Journal__c/fields/Ad_Click_Source_Id__c.field-meta.xml
<CustomField>
    <fullName>Ad_Click_Source_Id__c</fullName>
    <description>This field will contain the source id of an ad, an example is the Google Ad word gclsrc value.</description>
    <label>Ad Click Source Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>