unpackaged/main/default/objects/Lead_Response_Journal__c/fields/Annual_Sales_Detail__c.field-meta.xml
<CustomField>
    <fullName>Annual_Sales_Detail__c</fullName>
    <description>Stores the web form response to the question “Are your annual sales above $X?”. Lead gen populates this field by isolating the threshold amount and appending “Above/Below” depending on the answer provided.</description>
    <label>Annual Sales Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>