unpackaged/main/default/objects/Lead_Response_Journal__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated Contact of the Lead Response Journal</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Lead Response Journals</relationshipLabel>
    <relationshipName>Lead_Response_Journals</relationshipName>
    <type>Lookup</type>
</CustomField>