unpackaged/main/default/objects/Lead_Response_Journal__c/fields/Form_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Type__c</fullName>
    <description>This field will capture the type of form that the customer filled out.</description>
    <label>Form Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sidebar</fullName>
            </value>
            <value>
                <fullName>1 Step</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>