unpackaged/main/default/objects/Lead_Response_Journal__c/fields/Home_State__c.field-meta.xml
<CustomField>
    <fullName>Home_State__c</fullName>
    <label>Home State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>