unpackaged/main/default/objects/Lead_Response_Journal__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated lead of the Lead Response Journal</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead Response Journals</relationshipLabel>
    <relationshipName>Lead_Response_Journals</relationshipName>
    <type>Lookup</type>
</CustomField>