unpackaged/main/default/objects/Lead_Response_Journal__c/fields/Lead_Source_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Record_Id__c</fullName>
    <label>Lead Source Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>