unpackaged/main/default/objects/Lead_Response_Journal__c/fields/Lead_Source_Ref_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Ref_Type__c</fullName>
    <description>This field will be used as a description of a value that is stored in the Lead Source Ref Value field, this value would be provided by a Lead Source.</description>
    <label>Lead Source Ref Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>