unpackaged/main/default/objects/Lead_Response_Journal__c/fields/Lead_Source_Ref_Value__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Ref_Value__c</fullName>
    <description>This field will contain the value provided by a lead source.</description>
    <label>Lead Source Ref Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>