unpackaged/main/default/objects/Lead_Response_Journal__c/fields/Monthly_Sales__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Sales__c</fullName>
    <inlineHelpText>Populated by LeadGen using the dollar amount entered on the website form by the user</inlineHelpText>
    <label>Monthly Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>