unpackaged/main/default/objects/Lead_Response_Journal__c/fields/NAICS__c.field-meta.xml
<CustomField>
    <fullName>NAICS__c</fullName>
    <description>This field will contain the value of the NAICS that is associated with the record from the lead source.</description>
    <label>NAICS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>