unpackaged/main/default/objects/Lead_Response_Journal__c/fields/Originating_Brand__c.field-meta.xml
<CustomField>
    <fullName>Originating_Brand__c</fullName>
    <description>Introduced as part of the Quick Bridge to National Funding migration project to capture which brand the response originally came from. Inserted by LeadGen.</description>
    <inlineHelpText>Displays which brand this response originally sourced from</inlineHelpText>
    <label>Originating Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Originating_Brand</valueSetName>
    </valueSet>
</CustomField>