unpackaged/main/default/objects/Lead_Response_Journal__c/fields/Privacy_Policy_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Policy_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Privacy Policy Accepted</label>
    <type>Checkbox</type>
</CustomField>