unpackaged/main/default/objects/Lead_Response_Journal__c/fields/Response_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Response_DateTime__c</fullName>
    <label>Response DateTime</label>
    <type>DateTime</type>
</CustomField>