unpackaged/main/default/objects/Lead_Response_Journal__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>