unpackaged/main/default/objects/Lead_Response_Journal__c/fields/Submitted_AGS_Max__c.field-meta.xml
<CustomField>
    <fullName>Submitted_AGS_Max__c</fullName>
    <description>BAU-210
Allows Experiture web form leads to be submitted via buttons with amounts independent of the AGS Tier ranges.</description>
    <label>Submitted AGS Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>