unpackaged/main/default/objects/Lead_Response_Journal__c/fields/Tracking_Id__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Id__c</fullName>
    <description>This field will contain the tracking id from an online source. Example Ga Cookie</description>
    <label>Tracking Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>