unpackaged/main/default/objects/Lead_Response_Journal__c/fields/UTM_Campaign_Content__c.field-meta.xml
<CustomField>
    <fullName>UTM_Campaign_Content__c</fullName>
    <description>This field will capture the content of the campaign that generated a lead.</description>
    <label>UTM Campaign Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>