unpackaged/main/default/objects/Lead_Response_Journal__c/fields/UTM_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>UTM_Campaign_Name__c</fullName>
    <description>This field will contain the Name of the campaign.</description>
    <label>UTM Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>