unpackaged/main/default/objects/Lead_Response_Journal__c/fields/UTM_Campaign_Term__c.field-meta.xml
<CustomField>
    <fullName>UTM_Campaign_Term__c</fullName>
    <description>This field will capture the Term of the campaign that generated the lead.</description>
    <label>UTM Campaign Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>