unpackaged/main/default/objects/Lead_Response_Journal__c/fields/UTM_ID__c.field-meta.xml
<CustomField>
    <fullName>UTM_ID__c</fullName>
    <label>UTM ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>