unpackaged/main/default/objects/Lead_Response_Journal__c/fields/X_Mins_After_Creation__c.field-meta.xml
<CustomField>
    <fullName>X_Mins_After_Creation__c</fullName>
    <description>Field used to check partner evaluation after configured wait time.</description>
    <formula>CreatedDate + $Setup.Automation_Custom_Settings__c.Partner_Evaluation_Wait_Time__c/24/60</formula>
    <label>X Mins After Creation</label>
    <type>DateTime</type>
</CustomField>